# CodeXscs

./: .gitignore  Cargo.toml  README.md  reservations_mainnet.json
oracle/output/: oracle.abi.json  oracle.wasm
ping-pong/: deploy-testnet.interaction.json
ts/: domain.ts  index.ts  otherKey.pem  package.json  reservation.ts  reservations.json  xn-main.abi.json
xn-main/: Cargo.toml  call-devnet.interaction.json  deploy-devnet.interaction.json  mxpy-local.json  mxpy.data-storage.json  mxpy.json  walletKey.pem
xn-main/interaction/: snippets.sh
xn-main/meta/: Cargo.toml
xn-main/meta/src/: main.rs
xn-main/output/: xn-main.abi.json  xn-main.wasm
xn-main/scenarios/: _generated_init.scen.json  init.scen.json  register_renew.scen.json  register_renew_with_addr.scen.json  register_sub_domain.scen.json  remove_sub_domain.scen.json  transfer_domain.scen.json  xn-names-call-buy-bad-chars.scen.json  xn-names-call-buy-bad-tld.scen.json  xn-names-call-buy-small.scen.json  xn-names-call-buy.scen.json  xn-names-call-is-empty.scen.json  xn-names-call-update-primary-address.scen.json  xn-names-init.scen.json
xn-main/src/: async_call_module.rs  callback_module.rs  constant_module.rs  data_module.rs  nft_module.rs  price_oracle_module.rs  storage_module.rs  user_builtin.rs  utils_module.rs  xn_main.rs
xn-main/tests/: xn_main_test.rs
xn-main/wasm/: Cargo.toml
xn-main/wasm/src/: lib.rs
