[package]
name = "xn-main-wasm"
version = "0.0.1"
authors = ["Imad Bouziani <imad@bictory.io>"]
edition = "2018"
publish = false

[lib]
crate-type = ["cdylib"]

[workspace]
[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"
[dependencies.xn-main]
path = ".."

[dependencies.multiversx-sc-wasm-adapter]
version = "0.39.5"
